# ola-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_PREFLIGHT.sh  FUNDING.md  GOOD_FIRST_ISSUES.md  LICENSE  OUTREACH_TEMPLATES.md  POST_LAUNCH_CHECKLIST.md  README.md  SECURITY.md  SELF_VERIFY.sh  install_production.sh  preflight_report.txt  verify_all.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
assets/: ARCHITECTURE.md  LOGO_GUIDE.md
client/: ola_client.py
core/: Cargo.toml  README.md  check_all.sh  ola.service
core/src/: camera.rs  camera_worker.rs  main.rs  secure_store.rs
core/tests/: integration_test.py
docs/: FUNDING_ROADMAP.md  FUTURE_POSSIBILITIES.md  THREAT_MODEL.md  index.html
